-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.2
-
cbc5b4fbe (dev), c37256f6e (6.8)
To reproduce, run attached application, press some letter key and then arrow down.
For Gerrit Dashboard: QTBUG-127852 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
589783,2 | QAbstractItemView: use QPMI in currentChanged in case of layoutChanged | dev | qt/qtbase | Status: MERGED | +2 | 0 |
590645,2 | QAbstractItemView: use QPMI in currentChanged in case of layoutChanged | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |